[gd_scene load_steps=19 format=2]

[ext_resource path="res://Quest/QuestReward/QuestReward.gd" type="Script" id=1]
[ext_resource path="res://Content/Icons/Buildings/Blacksmith/gladius_normal.png" type="Texture" id=2]
[ext_resource path="res://Content/Icons/Buildings/Blacksmith/gladius_uncommon.png" type="Texture" id=3]
[ext_resource path="res://Content/Icons/Buildings/Blacksmith/gladius_rare.png" type="Texture" id=4]
[ext_resource path="res://Content/Icons/Buildings/Blacksmith/gladius_epic.png" type="Texture" id=5]
[ext_resource path="res://Content/Icons/Buildings/Blacksmith/leather-armor_normal.png" type="Texture" id=6]
[ext_resource path="res://Content/Icons/Buildings/Blacksmith/leather-armor_uncommon.png" type="Texture" id=7]
[ext_resource path="res://Content/Icons/Buildings/Blacksmith/leather-armor_rare.png" type="Texture" id=8]
[ext_resource path="res://Content/Icons/Buildings/Blacksmith/leather-armor_epic.png" type="Texture" id=9]
[ext_resource path="res://Content/Icons/Buildings/Alchemist/potion-ball_normal.png" type="Texture" id=10]
[ext_resource path="res://Content/Icons/Buildings/Alchemist/potion-ball_uncommon.png" type="Texture" id=11]
[ext_resource path="res://Content/Icons/Buildings/Alchemist/potion-ball_rare.png" type="Texture" id=12]
[ext_resource path="res://Content/Icons/Buildings/Alchemist/potion-ball_epic.png" type="Texture" id=13]
[ext_resource path="res://Content/Fonts/Building/Building_Text.tres" type="DynamicFont" id=14]
[ext_resource path="res://Content/Fonts/Building/Building_LevelUp.tres" type="DynamicFont" id=15]
[ext_resource path="res://Content/13673142972025527706free-game-icons-money-md.png" type="Texture" id=16]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 303.379, 98.8823 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 192.143, 92.392 )

[node name="QuestReward" type="Control"]
margin_right = 1050.0
margin_bottom = 900.0
rect_min_size = Vector2( 1050, 900 )
mouse_filter = 2
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
rect_min_size = Vector2( 1050, 900 )
mouse_filter = 2
color = Color( 0.898039, 0.894118, 0.67451, 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
editor/display_folded = true
margin_left = 19.0
margin_top = 18.0
margin_right = 357.0
margin_bottom = 198.0
rect_scale = Vector2( 3, 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
editor/display_folded = true
margin_right = 296.0
margin_bottom = 242.0
mouse_filter = 2

[node name="WeaponSelection" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_right = 296.0
margin_bottom = 78.0
custom_constants/separation = 32

[node name="NormalWeapon" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/WeaponSelection"]
margin_right = 50.0
margin_bottom = 78.0

[node name="TextureRect" type="TextureRect" parent="ScrollContainer/VBoxContainer/WeaponSelection/NormalWeapon"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 2 )
expand = true

[node name="CheckBoxW1" type="CheckBox" parent="ScrollContainer/VBoxContainer/WeaponSelection/NormalWeapon"]
margin_top = 54.0
margin_right = 50.0
margin_bottom = 78.0
pressed = true

[node name="UncommonWeapon" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/WeaponSelection"]
editor/display_folded = true
margin_left = 82.0
margin_right = 132.0
margin_bottom = 78.0

[node name="TextureRect" type="TextureRect" parent="ScrollContainer/VBoxContainer/WeaponSelection/UncommonWeapon"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 3 )
expand = true

[node name="CheckBox" type="CheckBox" parent="ScrollContainer/VBoxContainer/WeaponSelection/UncommonWeapon"]
margin_top = 54.0
margin_right = 50.0
margin_bottom = 78.0
pressed = true

[node name="RareWeapon" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/WeaponSelection"]
editor/display_folded = true
margin_left = 164.0
margin_right = 214.0
margin_bottom = 78.0

[node name="TextureRect" type="TextureRect" parent="ScrollContainer/VBoxContainer/WeaponSelection/RareWeapon"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 4 )
expand = true

[node name="CheckBox" type="CheckBox" parent="ScrollContainer/VBoxContainer/WeaponSelection/RareWeapon"]
margin_top = 54.0
margin_right = 50.0
margin_bottom = 78.0
pressed = true

[node name="EpicWeapon" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/WeaponSelection"]
editor/display_folded = true
margin_left = 246.0
margin_right = 296.0
margin_bottom = 78.0

[node name="TextureRect" type="TextureRect" parent="ScrollContainer/VBoxContainer/WeaponSelection/EpicWeapon"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 5 )
expand = true

[node name="CheckBox" type="CheckBox" parent="ScrollContainer/VBoxContainer/WeaponSelection/EpicWeapon"]
margin_top = 54.0
margin_right = 50.0
margin_bottom = 78.0
pressed = true

[node name="ArmourSelection" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
editor/display_folded = true
margin_top = 82.0
margin_right = 296.0
margin_bottom = 160.0
custom_constants/separation = 32

[node name="NormalArmour" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/ArmourSelection"]
editor/display_folded = true
margin_right = 50.0
margin_bottom = 78.0

[node name="TextureRect" type="TextureRect" parent="ScrollContainer/VBoxContainer/ArmourSelection/NormalArmour"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 6 )
expand = true

[node name="CheckBox" type="CheckBox" parent="ScrollContainer/VBoxContainer/ArmourSelection/NormalArmour"]
margin_top = 54.0
margin_right = 50.0
margin_bottom = 78.0
pressed = true

[node name="UncommonArmour" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/ArmourSelection"]
editor/display_folded = true
margin_left = 82.0
margin_right = 132.0
margin_bottom = 78.0

[node name="TextureRect" type="TextureRect" parent="ScrollContainer/VBoxContainer/ArmourSelection/UncommonArmour"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 7 )
expand = true

[node name="CheckBox" type="CheckBox" parent="ScrollContainer/VBoxContainer/ArmourSelection/UncommonArmour"]
margin_top = 54.0
margin_right = 50.0
margin_bottom = 78.0
pressed = true

[node name="RareArmour" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/ArmourSelection"]
editor/display_folded = true
margin_left = 164.0
margin_right = 214.0
margin_bottom = 78.0

[node name="TextureRect" type="TextureRect" parent="ScrollContainer/VBoxContainer/ArmourSelection/RareArmour"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 8 )
expand = true

[node name="CheckBox" type="CheckBox" parent="ScrollContainer/VBoxContainer/ArmourSelection/RareArmour"]
margin_top = 54.0
margin_right = 50.0
margin_bottom = 78.0
pressed = true

[node name="EpicArmour" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/ArmourSelection"]
editor/display_folded = true
margin_left = 246.0
margin_right = 296.0
margin_bottom = 78.0

[node name="TextureRect" type="TextureRect" parent="ScrollContainer/VBoxContainer/ArmourSelection/EpicArmour"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 9 )
expand = true

[node name="CheckBox" type="CheckBox" parent="ScrollContainer/VBoxContainer/ArmourSelection/EpicArmour"]
margin_top = 54.0
margin_right = 50.0
margin_bottom = 78.0
pressed = true

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
editor/display_folded = true
margin_top = 164.0
margin_right = 296.0
margin_bottom = 242.0
custom_constants/separation = 32

[node name="AlchemistNormal" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
editor/display_folded = true
margin_right = 50.0
margin_bottom = 78.0

[node name="TextureRect" type="TextureRect" parent="ScrollContainer/VBoxContainer/HBoxContainer/AlchemistNormal"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 10 )
expand = true

[node name="CheckBox" type="CheckBox" parent="ScrollContainer/VBoxContainer/HBoxContainer/AlchemistNormal"]
margin_top = 54.0
margin_right = 50.0
margin_bottom = 78.0
pressed = true

[node name="AlchemistUncommon" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
editor/display_folded = true
margin_left = 82.0
margin_right = 132.0
margin_bottom = 78.0

[node name="TextureRect" type="TextureRect" parent="ScrollContainer/VBoxContainer/HBoxContainer/AlchemistUncommon"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 11 )
expand = true

[node name="CheckBox" type="CheckBox" parent="ScrollContainer/VBoxContainer/HBoxContainer/AlchemistUncommon"]
margin_top = 54.0
margin_right = 50.0
margin_bottom = 78.0
pressed = true

[node name="AlchemistRare" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
editor/display_folded = true
margin_left = 164.0
margin_right = 214.0
margin_bottom = 78.0

[node name="TextureRect" type="TextureRect" parent="ScrollContainer/VBoxContainer/HBoxContainer/AlchemistRare"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 12 )
expand = true

[node name="CheckBox" type="CheckBox" parent="ScrollContainer/VBoxContainer/HBoxContainer/AlchemistRare"]
margin_top = 54.0
margin_right = 50.0
margin_bottom = 78.0
pressed = true

[node name="AlchemistEpic" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
editor/display_folded = true
margin_left = 246.0
margin_right = 296.0
margin_bottom = 78.0

[node name="TextureRect" type="TextureRect" parent="ScrollContainer/VBoxContainer/HBoxContainer/AlchemistEpic"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 13 )
expand = true

[node name="CheckBox" type="CheckBox" parent="ScrollContainer/VBoxContainer/HBoxContainer/AlchemistEpic"]
margin_top = 54.0
margin_right = 50.0
margin_bottom = 78.0
pressed = true

[node name="HSlider" type="HSlider" parent="."]
margin_left = 17.0
margin_top = 581.0
margin_right = 513.0
margin_bottom = 603.0
rect_scale = Vector2( 2, 2 )
max_value = 5000.0
rounded = true
ticks_on_borders = true

[node name="MoneyLabel" type="Label" parent="."]
margin_left = 39.0
margin_top = 624.0
margin_right = 565.0
margin_bottom = 666.0
custom_fonts/font = ExtResource( 14 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Money Reward: "

[node name="MoneyRewardAmount" type="Label" parent="."]
margin_left = 314.0
margin_top = 624.0
margin_right = 840.0
margin_bottom = 666.0
custom_fonts/font = ExtResource( 14 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"

[node name="Label" type="Label" parent="."]
margin_left = 10.8679
margin_top = 690.507
margin_right = 536.868
margin_bottom = 747.507
custom_fonts/font = ExtResource( 15 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Total Party Reward: "

[node name="Label2" type="Label" parent="."]
margin_left = 742.0
margin_top = 691.0
margin_right = 936.0
margin_bottom = 748.0
custom_fonts/font = ExtResource( 15 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Penalty:"

[node name="ScrollContainer2" type="ScrollContainer" parent="."]
editor/display_folded = true
margin_left = 13.0
margin_top = 765.0
margin_right = 606.0
margin_bottom = 879.0
scroll_vertical_enabled = false

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer2"]
margin_right = 446.0
margin_bottom = 100.0
custom_constants/separation = 16

[node name="WeaponRewardNormal" type="TextureRect" parent="ScrollContainer2/HBoxContainer"]
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 2 )
expand = true

[node name="WeaponRewardUncommin" type="TextureRect" parent="ScrollContainer2/HBoxContainer"]
visible = false
margin_left = 104.0
margin_right = 204.0
margin_bottom = 141.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 3 )
expand = true

[node name="WeaponRewardRare" type="TextureRect" parent="ScrollContainer2/HBoxContainer"]
visible = false
margin_left = 104.0
margin_right = 204.0
margin_bottom = 141.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 4 )
expand = true

[node name="WeaponRewardEpic" type="TextureRect" parent="ScrollContainer2/HBoxContainer"]
visible = false
margin_left = 104.0
margin_right = 204.0
margin_bottom = 141.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 5 )
expand = true

[node name="WeaponAmount" type="Label" parent="ScrollContainer2/HBoxContainer"]
margin_left = 116.0
margin_top = 29.0
margin_right = 138.0
margin_bottom = 71.0
custom_fonts/font = ExtResource( 14 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"

[node name="ArmourRewardNormal" type="TextureRect" parent="ScrollContainer2/HBoxContainer"]
margin_left = 154.0
margin_right = 254.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 6 )
expand = true

[node name="ArmourRewardUncommon" type="TextureRect" parent="ScrollContainer2/HBoxContainer"]
visible = false
margin_left = 208.0
margin_right = 308.0
margin_bottom = 141.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 7 )
expand = true

[node name="ArmourRewardRare" type="TextureRect" parent="ScrollContainer2/HBoxContainer"]
visible = false
margin_left = 208.0
margin_right = 308.0
margin_bottom = 141.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 8 )
expand = true

[node name="ArmourRewardEpic" type="TextureRect" parent="ScrollContainer2/HBoxContainer"]
visible = false
margin_left = 208.0
margin_right = 308.0
margin_bottom = 141.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 9 )
expand = true

[node name="ArmourAmount" type="Label" parent="ScrollContainer2/HBoxContainer"]
margin_left = 270.0
margin_top = 29.0
margin_right = 292.0
margin_bottom = 71.0
custom_fonts/font = ExtResource( 14 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"

[node name="Gold" type="TextureRect" parent="ScrollContainer2/HBoxContainer"]
margin_left = 308.0
margin_right = 408.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 16 )
expand = true

[node name="GoldAmount" type="Label" parent="ScrollContainer2/HBoxContainer"]
margin_left = 424.0
margin_top = 29.0
margin_right = 446.0
margin_bottom = 71.0
custom_fonts/font = ExtResource( 14 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"

[node name="ScrollContainer3" type="ScrollContainer" parent="."]
margin_left = 651.653
margin_top = 765.413
margin_right = 1022.65
margin_bottom = 866.413
scroll_vertical_enabled = false

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer3"]
margin_right = 154.0
margin_bottom = 100.0
custom_constants/separation = 32

[node name="Gold2" type="TextureRect" parent="ScrollContainer3/HBoxContainer"]
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 16 )
expand = true

[node name="GoldAmount2" type="Label" parent="ScrollContainer3/HBoxContainer"]
margin_left = 132.0
margin_top = 29.0
margin_right = 154.0
margin_bottom = 71.0
custom_fonts/font = ExtResource( 14 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"

[node name="PartyRewardHint" type="Area2D" parent="."]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="PartyRewardHint"]
position = Vector2( 308.883, 783.934 )
shape = SubResource( 1 )

[node name="PenaltyHint" type="Area2D" parent="."]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="PenaltyHint"]
position = Vector2( 833.557, 783.815 )
shape = SubResource( 2 )

[node name="PartyRewardHintPopup" type="PopupDialog" parent="."]
editor/display_folded = true
margin_left = 31.7334
margin_top = 337.961
margin_right = 595.733
margin_bottom = 699.961

[node name="RichTextLabel" type="RichTextLabel" parent="PartyRewardHintPopup"]
margin_left = 11.0
margin_top = 15.0
margin_right = 554.0
margin_bottom = 358.0
custom_fonts/normal_font = ExtResource( 14 )
text = "Quest rewards are granted to all party members when a quest is completed. This is a sum of the rewards needed to fulfill that promise. Note: a penalty will be applied if you can not fulfill the reward."

[node name="PenaltyHintPopup" type="PopupDialog" parent="."]
editor/display_folded = true
margin_left = 631.526
margin_top = 332.0
margin_right = 1035.53
margin_bottom = 694.0

[node name="RichTextLabel" type="RichTextLabel" parent="PenaltyHintPopup"]
margin_left = 12.0
margin_top = 13.0
margin_right = 391.0
margin_bottom = 356.0
custom_fonts/normal_font = ExtResource( 14 )
text = "The penalty (in gold) for not awarding adventurers with their promised rewards. Penalties can increase and decrease over time."
[connection signal="value_changed" from="HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="mouse_entered" from="PartyRewardHint" to="." method="_on_PartyRewardHint_mouse_entered"]
[connection signal="mouse_exited" from="PartyRewardHint" to="." method="_on_PartyRewardHint_mouse_exited"]
[connection signal="mouse_entered" from="PenaltyHint" to="." method="_on_PenaltyHint_mouse_entered"]
[connection signal="mouse_exited" from="PenaltyHint" to="." method="_on_PenaltyHint_mouse_exited"]
